--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,6 @@ android {
         viewBinding = true
     }
 
-
     defaultConfig {
         applicationId "com.example.mym_posdemomvvm"
         minSdk 21
@@ -39,6 +38,7 @@ android {
 
 dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     def lifecycle_version = "2.4.0-rc01"
     def arch_version = "2.1.0"
     def room_version = "2.3.0"
@@ -58,8 +58,8 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
