--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyMPosDemoMVVM">
+        android:theme="@style/AppTheme"
+        android:requestLegacyExternalStorage="true"
+        android:fullBackupContent="@xml/backup_descriptor">
         <activity
             android:name=".activities.MainActivity"
             android:exported="true">
