--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ android {
 dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    def lifecycle_version = "2.4.0-rc01"
+    def lifecycle_version = "2.4.0"
     def arch_version = "2.1.0"
     def room_version = "2.3.0"
 
@@ -55,8 +55,11 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
+    // pagination
+    implementation "androidx.paging:paging-runtime-ktx:3.0.1"
+    testImplementation "androidx.paging:paging-common-ktx:3.0.1"
 
-    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation "androidx.recyclerview:recyclerview:1.2.1"
