--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ android {
 dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    def lifecycle_version = "2.4.0"
+    def lifecycle_version = "2.4.0-rc01"
     def arch_version = "2.1.0"
     def room_version = "2.3.0"
 
@@ -54,6 +54,9 @@ dependencies {
     // RoomDb
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+
+    implementation 'androidx.room:room-ktx:2.3.0'
+    kapt "androidx.room:room-compiler:2.3.0"
 
     // pagination
     implementation "androidx.paging:paging-runtime-ktx:3.0.1"
