--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,34 +41,37 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     def lifecycle_version = "2.4.0-rc01"
     def arch_version = "2.1.0"
-    def room_version = "2.3.0"
-
+    def room_version = "2.4.0"
 
     // ViewModel
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
     // LiveData
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0"
     // Annotation processor
-    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+    kapt "androidx.lifecycle:lifecycle-compiler:2.4.0"
 
     // RoomDb
-    implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-runtime:2.4.1"
+    implementation 'androidx.room:room-ktx:2.4.1'
+    kapt "androidx.room:room-compiler:2.4.1"
+    implementation "androidx.room:room-paging:2.4.1"
 
-    implementation 'androidx.room:room-ktx:2.3.0'
-    kapt "androidx.room:room-compiler:2.3.0"
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
 
     // pagination
-    implementation "androidx.paging:paging-runtime-ktx:3.0.1"
-    testImplementation "androidx.paging:paging-common-ktx:3.0.1"
+    implementation "androidx.paging:paging-runtime-ktx:3.1.0"
+    testImplementation "androidx.paging:paging-common-ktx:3.1.0"
 
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation "androidx.recyclerview:recyclerview:1.2.1"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    testImplementation "com.google.truth:truth:1.1.3"
+    androidTestImplementation "com.google.truth:truth:1.1.3"
 //    cd C:\Users\Abhishek\AppData\Local\Android\sdk\platform-tools
 }
