--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,18 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions{
+            annotationProcessorOptions {
+                arguments += ["room.schemaLocation":
+                                      "$projectDir/schemas".toString()]
+            }
+        }
+    }
+
+    sourceSets {
+        androidTest.assets.srcDirs +=
+                files("$projectDir/schemas".toString())
     }
 
     buildTypes {
@@ -39,6 +51,7 @@ android {
 dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'com.google.android.material:material:1.4.0'
     def lifecycle_version = "2.4.0-rc01"
     def arch_version = "2.1.0"
     def room_version = "2.4.0"
@@ -73,5 +86,8 @@ dependencies {
 
     testImplementation "com.google.truth:truth:1.1.3"
     androidTestImplementation "com.google.truth:truth:1.1.3"
+    androidTestImplementation "android.arch.persistence.room:testing:1.1.1"
+
+
 //    cd C:\Users\Abhishek\AppData\Local\Android\sdk\platform-tools
 }
