--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,13 +20,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".moduls.swipetoshowbutton.SwipeActivity"
+            android:name=".moduls.recyclerviewswipe.RecyclerViewSwipeActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".moduls.swipetoshowbutton.SwipeActivity"
+            android:exported="true">
         </activity>
         <activity
             android:name=".activities.StatusActivity"
