--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,25 +1,26 @@
 plugins {
     id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
     id 'kotlin-android'
     id 'kotlin-kapt'
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     buildFeatures {
         viewBinding = true
-        compose true
+//        compose true
     }
 
-    composeOptions {
-        kotlinCompilerExtensionVersion '1.1.1'
-    }
+//    composeOptions {
+//        kotlinCompilerExtensionVersion '1.1.1'
+//    }
 
     defaultConfig {
-        applicationId "com.example.mym_posdemomvvm"
-        minSdk 21
-        targetSdk 32
+        applicationId "com.example.andorid.testing"
+        minSdk 23
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -55,39 +56,36 @@ android {
 
 dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.recyclerview:recyclerview:1.3.1'
     implementation 'com.google.android.material:material:1.5.0'
-    def lifecycle_version = "2.4.0-rc01"
-    def arch_version = "2.1.0"
-    def room_version = "2.4.0"
 
     // ViewModel
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
     // LiveData
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.1"
     // Annotation processor
-    kapt "androidx.lifecycle:lifecycle-compiler:2.4.1"
+    kapt "androidx.lifecycle:lifecycle-compiler:2.6.1"
 
     // RoomDb
-    implementation "androidx.room:room-runtime:2.4.2"
-    implementation 'androidx.room:room-ktx:2.4.2'
-    kapt "androidx.room:room-compiler:2.4.2"
-    implementation "androidx.room:room-paging:2.4.2"
+    implementation "androidx.room:room-runtime:2.5.2"
+    implementation 'androidx.room:room-ktx:2.5.2'
+    kapt "androidx.room:room-compiler:2.5.2"
+    implementation "androidx.room:room-paging:2.5.2"
 
-    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestImplementation "androidx.arch.core:core-testing:2.2.0"
 
     // pagination
-    implementation "androidx.paging:paging-runtime-ktx:3.1.1"
-    testImplementation "androidx.paging:paging-common-ktx:3.1.1"
+    implementation "androidx.paging:paging-runtime-ktx:3.2.0"
+    testImplementation "androidx.paging:paging-common-ktx:3.2.0"
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation "androidx.recyclerview:recyclerview:1.2.1"
+    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation "androidx.recyclerview:recyclerview:1.3.1"
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     testImplementation "com.google.truth:truth:1.1.3"
     androidTestImplementation "com.google.truth:truth:1.1.3"
@@ -95,13 +93,25 @@ dependencies {
 
 
     // Jetpack dependencies
-    implementation "androidx.compose.ui:ui:1.1.1"
-    implementation "androidx.compose.material:material:1.1.1"
-    implementation 'androidx.activity:activity-compose:1.4.0'
+//    implementation "androidx.compose.ui:ui:1.4.3"
+//    implementation "androidx.compose.material:material:1.4.3"
+//    implementation 'androidx.activity:activity-compose:1.7.2'
     // Jetpack debug dependencies
-    debugImplementation "androidx.compose.ui:ui-tooling:1.1.1"
+//    debugImplementation "androidx.compose.ui:ui-tooling:1.4.3"
 
-    testImplementation 'org.json:json:20140107'
+    testImplementation 'org.json:json:20180813'
 
+    // ktx
+    implementation "androidx.core:core-ktx:1.10.1"
+    implementation 'androidx.fragment:fragment-ktx:1.6.1'
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
+
+    //worm manager
+    implementation 'androidx.work:work-runtime-ktx:2.8.1'
+    implementation "androidx.work:work-runtime:2.8.1"
 //    cd C:\Users\Abhishek\AppData\Local\Android\sdk\platform-tools
+
+    implementation project(path: ':dragView')
+
 }
